Update SuperpowersWildcard.java