@@ -9,10 +9,8 @@ import net.mat0u5.lifeseries.utils.other.IdentifierHelper;
 import net.mat0u5.lifeseries.utils.player.PlayerUtils;
 import net.minecraft.network.chat.Component;
 import net.minecraft.server.level.ServerPlayer;
-import net.minecraft.sounds.SoundEvent;
 import net.minecraft.server.network.ServerPlayerEntity;
-import net.minecraft.sound.SoundEvent;
-import net.minecraft.text.Text;
+import net.minecraft.sounds.SoundEvent;
 import net.minecraft.util.Identifier;
 import org.jetbrains.annotations.Nullable;
 
@@ -21,10 +19,10 @@ import java.util.*;
 import static net.mat0u5.lifeseries.Main.livesManager;
 
 public class SuperpowersWildcard extends Wildcard {
+
     public static boolean WILDCARD_SUPERPOWERS_DISABLE_INTRO_THEME = false;
     public static List<Superpowers> blacklistedPowers = List.of();
 
-    // Multiple powers per player now
     private static final Map<UUID, Set<Superpower>> playerSuperpowers = new HashMap<>();
     public static final Map<UUID, Superpowers> assignedSuperpowers = new HashMap<>();
     public static int ZOMBIES_HEALTH = 8;
@@ -103,6 +101,7 @@ public class SuperpowersWildcard extends Wildcard {
 
         for (ServerPlayer player : allPlayers) {
             Superpowers power = implemented.get(pos % implemented.size());
+
             if (assignedSuperpowers.containsKey(player.getUUID())) {
                 power = assignedSuperpowers.get(player.getUUID());
                 assignedSuperpowers.remove(player.getUUID());
@@ -125,7 +124,9 @@ public class SuperpowersWildcard extends Wildcard {
         }
 
         if (!WILDCARD_SUPERPOWERS_DISABLE_INTRO_THEME) {
-            PlayerUtils.playSoundToPlayers(allPlayers, SoundEvent.createVariableRangeEvent(IdentifierHelper.vanilla("wildlife_superpowers")), 0.2f, 1);
+            PlayerUtils.playSoundToPlayers(allPlayers,
+                    SoundEvent.createVariableRangeEvent(IdentifierHelper.vanilla("wildlife_superpowers")),
+                    0.2f, 1);
         }
     }
 
@@ -135,7 +136,8 @@ public class SuperpowersWildcard extends Wildcard {
         implemented.remove(Superpowers.LISTENING);
         Collections.shuffle(implemented);
 
-        Superpowers power = implemented.getFirst();
+        Superpowers power = implemented.get(0);
+
         if (assignedSuperpowers.containsKey(player.getUUID())) {
             power = assignedSuperpowers.get(player.getUUID());
             assignedSuperpowers.remove(player.getUUID());
@@ -147,81 +149,64 @@ public class SuperpowersWildcard extends Wildcard {
         }
 
         if (!WILDCARD_SUPERPOWERS_DISABLE_INTRO_THEME) {
-            PlayerUtils.playSoundToPlayer(player, SoundEvent.createVariableRangeEvent(IdentifierHelper.vanilla("wildlife_superpowers")), 0.2f, 1);
+            PlayerUtils.playSoundToPlayer(player,
+                    SoundEvent.createVariableRangeEvent(IdentifierHelper.vanilla("wildlife_superpowers")),
+                    0.2f, 1);
         }
         Necromancy.checkRessurectedPlayersReset();
     }
 
-    // Allows stacking powers instead of replacing
     public static void setSuperpower(ServerPlayer player, Superpowers superpower) {
-    Superpower instance = superpower.getInstance(player);
+        Superpower instance = superpower.getInstance(player);
         if (instance != null) {
             playerSuperpowers.computeIfAbsent(player.getUUID(), k -> new HashSet<>()).add(instance);
         }
 
         if (!WILDCARD_SUPERPOWERS_DISABLE_INTRO_THEME) {
-            PlayerUtils.playSoundToPlayer(player, SoundEvent.createVariableRangeEvent(IdentifierHelper.vanilla("wildlife_superpowers")), 0.2f, 1);
+            PlayerUtils.playSoundToPlayer(player,
+                    SoundEvent.createVariableRangeEvent(IdentifierHelper.vanilla("wildlife_superpowers")),
+                    0.2f, 1);
         }
     }
 
     public static void pressedSuperpowerKey(ServerPlayer player) {
-        if (playerSuperpowers.containsKey(player.getUUID())) {
-        if (player.ls$isAlive()) {
-            PlayerUtils.displayMessageToPlayer(player, Component.literal("Dead players can't use superpowers!"), 60);            return;
+        if (!playerSuperpowers.containsKey(player.getUUID())) return;
+        if (!player.ls$isAlive()) {
+            PlayerUtils.displayMessageToPlayer(player, Component.literal("Dead players can't use superpowers!"), 60);
+            return;
         }
         playerSuperpowers.get(player.getUUID()).forEach(Superpower::onKeyPressed);
     }
 
-        public static boolean hasPower(ServerPlayer player) {
-            return playerSuperpowers.containsKey(player.getUUID());
-                !playerSuperpowers.get(player.getUUID()).isEmpty();
+    public static boolean hasPower(ServerPlayer player) {
+        Set<Superpower> powers = playerSuperpowers.get(player.getUUID());
+        return powers != null && !powers.isEmpty();
     }
 
-        public static boolean hasActivatedPower(ServerPlayer player, Superpowers superpower) {
-            if (!playerSuperpowers.containsKey(player.getUUID())) return false;
-            Superpower power = playerSuperpowers.get(player.getUUID());
+    public static boolean hasActivatedPower(ServerPlayer player, Superpowers superpower) {
+        Set<Superpower> powers = playerSuperpowers.get(player.getUUID());
+        if (powers == null) return false;
+
+        for (Superpower power : powers) {
             if (power instanceof Mimicry mimicry && superpower != Superpowers.MIMICRY) {
                 if (mimicry.getMimickedPower().getSuperpower() == superpower) return true;
-            } else if (power.getSuperpower() == superpower) {
+            } else if (power.getSuperpower() == superpower && power.active) {
                 return true;
             }
         }
         return false;
     }
-
-    public static boolean hasActivatedPower(ServerPlayerEntity player, Superpowers superpower) {
-        if (!playerSuperpowers.containsKey(player.getUUID())) return false;
-        for (Superpower power : playerSuperpowers.get(player.getUUID())) {
-            if (power instanceof Mimicry mimicry && superpower != Superpowers.MIMICRY) {
-                if (mimicry.getMimickedPower().active) return true;
-            } else if (power.active && power.getSuperpower() == superpower) {
-                return true;
-            }
-        }
-        return false;
-    }
-
-    // --- BACKWARD COMPATIBILITY SECTION ---
 
     @Nullable
-    public static Superpowers getSuperpower(ServerPlayer player) {
-        if (playerSuperpowers.containsKey(player.getUUID())) {
-            Superpower power = playerSuperpowers.get(player.getUUID());
+    public static Superpower getSuperpowerInstance(ServerPlayer player) {
+        Set<Superpower> powers = playerSuperpowers.get(player.getUUID());
+        if (powers == null || powers.isEmpty()) return null;
 
-        // Prefer an active one
         for (Superpower power : powers) {
-            if (power.active) return power;
+            if (power instanceof Mimicry mimicry) {
+                return mimicry.getMimickedPower();
+            }
         }
-        // Otherwise return first
-        return powers.iterator().next();
-    }
-
-        public static Superpower getSuperpowerInstance(ServerPlayer player) {
-            if (!playerSuperpowers.containsKey(player.getUUID())) return null;
-            Superpower power = playerSuperpowers.get(player.getUUID());
-        if (instance instanceof Mimicry mimicry) {
-            return mimicry.getMimickedPower().getSuperpower();
-        }
-        return instance.getSuperpower();
+        return powers.iterator().next(); // fallback
     }
 }
